Updating inference code

--- a/notebooks/segment.ipynb
+++ b/notebooks/segment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d55ea4ed-0f29-4f56-8536-97eea365b444",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,7 @@
    "source": [
     "import sys\n",
     "import lightning as L\n",
+    "import torch\n",
     "from omegaconf import OmegaConf\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -62,15 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "48d5999d-c81f-4c9b-845c-e6bcd889a135",
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
     "model_name = SegmentationModule\n",
     "\n",
     "model = model_name(config)\n",
-    "model = load_from_checkpoint(config, model, model_name=model_name)"
+    "model = load_from_checkpoint(config, model, model_name=model_name)\n",
+    "model = model.to(device)"
    ]
   },
   {
