--- a/notebooks/segment_entire_img.ipynb
+++ b/notebooks/segment_entire_img.ipynb
@@ -18,30 +18,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tatu/venv/ewab/lib/python3.12/site-packages/torchvision/transforms/v2/_deprecated.py:42: UserWarning: The transform `ToTensor()` is deprecated and will be removed in a future release. Instead, please use `v2.Compose([v2.ToImage(), v2.ToDtype(torch.float32, scale=True)])`.Output is equivalent up to float precision.\n",
-      "  warnings.warn(\n"
+      "/home/gabriel/Documentos/Mestrado/sat-series-segmentation/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "import lightning as L\n",
     "import torch\n",
     "from omegaconf import OmegaConf\n",
-    "from tqdm.notebook import tqdm\n",
-    "from torchvision.transforms.v2 import Compose\n",
-    "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "sys.path.append(\"..\")\n",
     "\n",
     "from models import SegmentationModule\n",
-    "from data import LEM_Full, IBGE_Full\n",
-    "from utils import load_from_checkpoint\n",
-    "\n",
-    "from data.transforms import (\n",
-    "    ToTensor,\n",
-    "    SampleTimestamps\n",
-    ")"
+    "from data import LEM_Full_Module, IBGE_Full_Module\n",
+    "from utils import load_from_checkpoint, get_data_sample, time_series_to_rgb, get_preds_from_logits"
    ]
   },
   {
@@ -53,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "{'model': {'task': 'segmentation', 'backbone': 'mae', 'decoder': 'segformer', 'img_size': 96, 'num_channels': 10, 'num_frames': 2, 'num_classes': 3, 'patch_size': 8}, 'dataset': {'name': 'ibge_full', 'validate': True, 'batch_size': 32, 'num_workers': 4, 'data_dir': '/pgeoprj2/godeep/ewab/datasets/capitao_poco'}, 'solver': {'name': 'adam', 'criterion': 'dice', 'learning_rate': 0.001, 'class_weights': None, 'weight_decay': None, 'warmup_epochs': None, 'max_epochs': 100, 'dev_run': False, 'overfit_batches': False}, 'checkpoint': {'save_dir': '/pgeoprj2/godeep/ewab/experiments/lem_supervised', 'run_name': 'mae_segformer_weighted', 'pretrain_weights': None, 'ckpt_path': '/pgeoprj2/godeep/ewab/experiments/lem_supervised/wandb/ckpt_mae_segformer_weighted/mae_segformer_weighted-epoch=93-train_loss=0.00.ckpt', 'save_checkpoint': True}}"
+       "{'model': {'task': 'segmentation', 'backbone': 'mae', 'decoder': 'segformer', 'img_size': 96, 'num_channels': 10, 'num_frames': 2, 'num_classes': 3, 'patch_size': 8}, 'dataset': {'name': 'lem_full', 'validate': True, 'batch_size': 32, 'num_workers': 4, 'data_dir': '/media/gabriel/Dados/Datasets/LEM_dataset', 'city_id': 2919553}, 'solver': {'name': 'adam', 'criterion': 'dice', 'learning_rate': 0.001, 'class_weights': None, 'weight_decay': None, 'warmup_epochs': None, 'max_epochs': 100, 'dev_run': False, 'overfit_batches': False}, 'checkpoint': {'save_dir': '/home/gabriel/Documentos/Mestrado/experiments/ibge_inference', 'run_name': 'mae_segformer_weighted', 'pretrain_weights': None, 'ckpt_path': '/home/gabriel/Documentos/Mestrado/experiments/best_model.ckpt', 'save_checkpoint': True}}"
       ]
      },
      "execution_count": 2,
@@ -62,7 +55,7 @@
     }
    ],
    "source": [
-    "CONFIG_FILE_PATH = \"../configs/train_config.yaml\"\n",
+    "CONFIG_FILE_PATH = \"../configs/train_config_local.yaml\"\n",
     "\n",
     "config = OmegaConf.load(CONFIG_FILE_PATH)\n",
     "config"
@@ -78,12 +71,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n"
+      "Using device: cpu\n"
      ]
     }
    ],
    "source": [
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "#### Forcing CPU usage\n",
+    "device = \"cpu\"\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
+    "####\n",
+    "\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
     "model_name = SegmentationModule\n",
@@ -95,27 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "eaa3bcbe-3ff0-4e5c-983c-6f8928cfedce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transforms = Compose([\n",
-    "    SampleTimestamps(num_timestamps=config.model.num_frames, sample_type=\"first\"),\n",
-    "    ToTensor()\n",
-    "])\n",
-    "dataset = IBGE_Full(\n",
-    "    config.dataset.data_dir,\n",
-    "    patch_size=config.model.img_size,\n",
-    "    transform=transforms\n",
-    ")\n",
-    "dataloader = DataLoader(\n",
-    "    dataset,\n",
-    "    batch_size=config.dataset.batch_size,\n",
-    "    num_workers=config.dataset.num_workers,\n",
-    "    pin_memory=True,\n",
-    "    shuffle=False\n",
-    ")"
+    "data_module = LEM_Full_Module(config)\n",
+    "data_module.setup()"
    ]
   },
   {
@@ -208,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ewab",
+   "display_name": ".venv",
    "language": "python",
-   "name": "ewab"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
